Ho settato bene il wrapper di gradle, ho creato la cartella sources per mettere tutto quello che non rigurada la implemantazione, con i file fxml, il css, e il logo